Version 1.2.9 - 11 September 2007, by Thierry Vignaud

- fix including the doc of sub-modules

Version 1.2.8 - 04 September 2007, by Thierry Vignaud

- make formatError() work with any modules (#33131)

Version 1.2.7 - 09 August 2007, by Thierry Vignaud

- fix installer breakage

Version 1.2.6 - 06 August 2007, by Thierry Vignaud

- make find_index() pinpoint the actual bug (ie the caller)
- make formatError() safer (managing exceptions containing " at ")

Version 1.2.5 - 30 May 2007, by Pascal "Pixel" Rigaux

- enhance fuzzy_pidofs() to handle kernel processes